# font_module_maker

./: .gitignore  GEMINI.md  README.md  cli.py  font_processor.py  make_module.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
temp_module_dir/: ARSmaq.xz  config.cfg  customize.sh  module.prop
templates/OMF/: .gitignore  README.md  config.cfg  customize.sh  module.prop
tests/: test_font_processor.py  test_safe_extract.py
utils/: safe_extract.py
